# magellanmapper

./: .gitignore  .mlp  .pylintrc  .readthedocs.yaml  Dockerfile  LICENSE.txt  README.md  README.txt  build_docs.sh  build_se.bat  build_se.sh  deploy.sh  environment.yml  environment_full.yml  environment_light.yml  environment_lin.yml  environment_mac.yml  environment_win.yml  libclr.sh  pipelines.sh  plot_2d.py  process_aws.sh  process_nohup.sh  pyproject.toml  requirements.txt  run  run.py  run_cli.py  runclrbrain.sh  setup.py  setup_conda.sh  setup_env.sh  setup_runclrbrain.sh  setup_server.sh  setup_venv.sh  stitch.sh  surf_clean.sh  test_bioformats.py  test_czi_matplotlib.py  visualizer.py
.github/: dependabot.yml
.github/workflows/: main.yml
clrbrain/: atlas_editor.py  atlas_refiner.py  atlas_stats.py  aws.py  chunking.py  cli.py  clustering.py  colormaps.py  config.py  detector.py  edge_seg.py  export_regions.py  export_rois.py  export_stack.py  exporter.py  importer.py  learn.py  lib_clrbrain.py  mlearn.py  notify.py  np_io.py  ontology.py  plot_2d.py  plot_3d.py  plot_editor.py  plot_support.py  profiles.py  register.py  roi_editor.py  segmenter.py  sitk_io.py  sqlite.py  stack.py  stack_detect.py  stats.py  transformer.py  unit_testing.py  visualizer.py  vols.py
clrbrain/register/: reg.py
clrstats/: DESCRIPTION  run.R
clrstats/R/: clrstats.R  jitter_plot.R  volcano_plot.R
docker/buildse/: Dockerfile
docker/miniconda3/: Dockerfile
docker/ubuntu1604/: Dockerfile
docker/ubuntu1604_venv/: Dockerfile
docker/ubuntu1804/: Dockerfile
docs/: Makefile  cli.md  cloud_aws.md  clrbrain.rst  conf.py  index.rst  install.md  load.md  make.bat  modules.rst  pipelines.md  settings.md  stitch.rst  viewers.md
docs/release/: index.md  release_template.md  release_v0.9.md  release_v1.0.md  release_v1.1.2.md  release_v1.1.md  release_v1.2.md  release_v1.3.md  release_v1.4.md  release_v1.5.md  release_v1.6.md  release_v1.7.md
envs/: environment_all.yml  environment_light.yml  environment_lin.yml  environment_mac.yml  environment_mm.yml  environment_rel.yml  environment_win.yml  requirements.txt  requirements_py36  requirements_py37
images/: magmap.icns
magmap/: atlas_editor.py  atlas_refiner.py  atlas_stats.py  aws.py  chunking.py  cli.py  clustering.py  colormaps.py  config.py  cv_nd.py  detector.py  df_io.py  edge_seg.py  export_regions.py  export_rois.py  export_stack.py  importer.py  lib_clrbrain.py  mlearn.py  notify.py  np_io.py  ontology.py  plot_2d.py  plot_3d.py  plot_editor.py  plot_support.py  profiles.py  register.py  roi_editor.py  segmenter.py  sitk_io.py  sqlite.py  stack_detect.py  stats.py  transformer.py  unit_testing.py  visualizer.py  vols.py
magmap/atlas/: atlas_refiner.py  brain_globe.py  edge_seg.py  labels_meta.py  ontology.py  reg_tasks.py  register.py  segmenter.py  transformer.py
magmap/brain_globe/: bg_controller.py  bg_model.py
magmap/cloud/: aws.py  notify.py
magmap/cv/: chunking.py  classifier.py  colocalizer.py  cv_nd.py  detector.py  segmenter.py  stack_detect.py  verifier.py
magmap/gui/: atlas_editor.py  atlas_threads.py  bg_panel.py  event_handlers.py  image_viewer.py  import_threads.py  pixel_display.py  plot_editor.py  vis_3d.py  (+4 more)
profiles/: atlas_reg.yaml  atlas_rotate.yml  grid_sizes.yaml  roi_blobs.yaml
stats/: DESCRIPTION  clrstats.R
stitch/: ij_bigstitch.py  ij_stitch.py  mesospim_to_tif.py  stitch.sh  tile_config.py
surfaces/: decimate_1pct.mlx
tests/: test_czi_gohlke.py  test_czi_mayavi.py
(+42 files in other folders)
